add Task CRUD methods